--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ body  {
 
 .container {  
    padding: 0 calc(50vw - 555px);    
-   display: grid;
+  /* display: grid;*/
 }
 
 .header {
@@ -205,3 +205,192 @@ background: #EEEFF1;
     font-size: 13px;
     margin: 0;
 }
+
+@media screen  and (max-width: 1100px) {
+    .container {  
+        padding: 0 calc(50vw - 350px);              
+      }
+      .img,video,iframe {
+        display: block;
+        width: 100%;
+      }
+      .projects {
+        justify-content: center;
+      }
+    .button {
+        border-radius: 10px;
+        padding: 10px 10px;
+    }
+    .button:hover, .button:focus {
+        background-color:red;
+        transition: 0.5s;
+    }
+    .projects__icon{
+        padding: 5px;
+    }
+    .footer__title{
+        padding: 10px 0;
+    }
+    .footer__copy {
+        padding-bottom: 5px;
+    }
+    .section-title{
+        margin-top: 20px;
+    }
+ 
+}
+@media screen  and (max-width: 800px) {
+    .container {  
+        padding: 0 calc(50vw - 300px);  
+        width: 100%;            
+      }
+      .img,video,iframe {
+        display: block;
+        width: 100%;
+      }
+      .projects {
+        display: grid;
+        grid-template-columns: 2fr 2fr 2fr;
+    }
+
+    .button {
+        border-radius: 10px;
+        padding: 10px 10px;
+    }
+    .button:hover, .button:focus {
+        background-color:red;
+        transition: 0.5s;
+    }
+    .projects__icon{
+        padding: 0px;
+    }
+    .footer__title{
+        padding: 10px 0;
+    }
+    .footer__copy {
+        padding-bottom: 5px;
+    }
+    .section-title{
+        margin-top: 20px;
+    }
+ 
+}
+
+@media screen  and (max-width: 450px) {
+   .header__menu {     
+    gap: 12px;  
+   }
+  
+    .container {  
+        padding: 0 calc(50vw - 150px);
+        width: 100%;  
+        padding: 0;    
+        margin: 0;        
+    }
+
+    .img,video,iframe {
+        display: block;
+        width: 100%;
+    }
+    .projects {
+        display: grid;
+        grid-template-columns: 3fr 3fr ;    
+    }
+
+    .button {
+        border-radius: 50px;
+        width: 200px;
+        height: 55px;
+    }
+    .img {
+        height: 50px;
+    }
+
+    .button:hover, .button:focus {
+        background-color:red;
+        transition: 0.5s;
+    }
+
+    .projects__icon{
+        padding: 5px;
+    }
+
+    .projects__item {
+       flex-wrap: wrap;      
+    }
+
+
+    .footer__title{
+        padding: 10px 0;
+    }
+
+    .footer__copy {
+        padding-bottom: 5px;
+    }
+
+    .section-title{
+        margin-top: 20px;
+    }
+
+
+}
+
+
+@media screen  and (max-width: 380px) {
+    .container {  
+        padding: 0 calc(50vw - 102px);
+        width: 100%;  
+        padding: 0;    
+        margin: 0;     
+       
+    }
+    .img,video,iframe {
+        display: block;
+        width: 100%;
+    }
+    .projects {
+        display: grid;
+        grid-template-columns: 3fr 3fr ;
+        padding: 5px 5px;       
+       
+    }
+
+    .button {
+        border-radius: 10px;
+        padding: 10px 10px;
+    }
+
+    .button:hover, .button:focus {
+        background-color:red;
+        transition: 0.5s;
+    }
+
+    .projects__icon{
+        padding: 5px;
+    }
+
+    .projects__item {
+       flex-wrap: wrap;
+       padding: 0;     
+    }
+  
+    .footer__title{
+        padding: 10px 0;
+    }
+
+    .footer__copy {
+        padding-bottom: 5px;
+    }
+
+    .section-title{
+        margin-top: 20px;
+    }
+
+    .header__menu {
+        display: grid;
+        grid-template-columns: 1fr 2fr 2fr ;
+    }
+ 
+}
+
+
